--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,15 @@
 @import "tailwindcss";
 
-
-html, body {
+html,
+body {
     overflow-x: hidden;
-    width: 100vw;
-  }
+    width: 100%;
+}
 
-  body{
+body {
     background-color: black;
-  }
+}
+
 :root {
     --radius: 0.625rem;
     --background: oklch(1 0 0);
@@ -114,7 +115,10 @@ html, body {
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
-    --shadow-input: 0px 2px 3px -1px rgba(0, 0, 0, 0.1), 0px 1px 0px 0px rgba(25, 28, 33, 0.02), 0px 0px 0px 1px rgba(25, 28, 33, 0.08);
+    --shadow-input:
+        0px 2px 3px -1px rgba(0, 0, 0, 0.1),
+        0px 1px 0px 0px rgba(25, 28, 33, 0.02),
+        0px 0px 0px 1px rgba(25, 28, 33, 0.08);
 }
 
 @layer base {
